# rd-celery-django-redis

./: LICENSE  README.md  pyproject.toml
project/: celery.py  settings.py
project/any_app/: apps.py  tasks.py
project/any_app/management/commands/: test_celery.py  work1.py  work2.py
